update to v1.7.5